# SD1D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cubic_spline_local.cxx  cubic_spline_local.hxx  div_ops.cxx  div_ops.hxx  energy-flux.py  fluid.hxx  fluid_full.cxx  fluid_full.hxx  impurity_user_input.json  loadmetric.cxx  loadmetric.hxx  makefile  modified-two-point.py  multifluid.hxx  non-local_parallel.cxx  non-local_parallel.hxx  non-local_parallel_integration.cxx  non-local_parallel_integration.hxx  non-local_parallel_serial_matrixsolve.cxx  non-local_parallel_serial_matrixsolve.hxx  non-local_parallel_sheath_solver.cxx  non-local_parallel_sheath_solver.hxx  non-local_parallel_toroidal_solver.cxx  non-local_parallel_toroidal_solver.hxx  pressure-balance.py  processes.py  profiles.py  radiation.cxx  radiation.hxx  reaction.hxx  reaction_atomicpp.cxx  reaction_cx.cxx  reaction_elastic.cxx  reaction_excitation.cxx  reaction_impurity.cxx  reaction_ionisation.cxx  (+9 more)
MAST-U/: BOUT.inp  README.md
MMS/: mms.py
atomicpp/: ImpuritySpecies.cxx  ImpuritySpecies.hxx  Prad.cxx  RateCoefficient.cxx  RateCoefficient.hxx  makefile  sharedFunctions.cxx  sharedFunctions.hxx
case-01/: BOUT.inp  README.md
case-02/: BOUT.inp  README.md
case-03/: BOUT.inp  README.md
case-04/: BOUT.inp  README.md
case-05/: BOUT.inp  README.md
case-05-impurity/: BOUT.inp
case-05-nonlocal/: BOUT.inp  README.md
case-elm/: BOUT.inp
doc/: makefile  sd1d-manual.tex
doc/doxygen/: Doxyfile
doc/sphinx/: atomic.rst  boundary.rst  conf.py  index.rst  introduction.rst  model.rst  neutral.rst  numerical.rst  outputs.rst  sources.rst
nonlocal_coefficients/: VeminusVidrivecoeffs10  VeminusVidrivecoeffs20  VeminusVidrivecoeffs30  VeminusVidrivecoeffs40  frictioncoeffs10  frictioncoeffs20  frictioncoeffs30  frictioncoeffs40  gradTdrivecoeffs10  gradTdrivecoeffs20  gradTdrivecoeffs30  gradTdrivecoeffs40  gradVdrivecoeffs10  gradVdrivecoeffs20  gradVdrivecoeffs30  gradVdrivecoeffs40  heatfluxbc10  heatfluxbc20  heatfluxbc30  heatfluxbc40  heatfluxcoeffs10  heatfluxcoeffs20  heatfluxcoeffs30  heatfluxcoeffs40  maxwelliansourcedrivescoeffs10  maxwelliansourcedrivescoeffs20  maxwelliansourcedrivescoeffs40  viscositybc10  viscositybc20  viscositybc30  viscositybc40  viscositycoeffs10  viscositycoeffs20  viscositycoeffs30  viscositycoeffs40
reactor/local/: BOUT.inp
reactor/nonlocal/: BOUT.inp
tests/case-01/: runtest
tests/case-01/data/: BOUT.inp
